@@ -6,7 +6,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
 	<title>Purpose of tests section</title>
-	
+
 	<link rel="stylesheet" href="/css/crunchy_docs.css" type="text/css" charset="utf-8">
 </head>
 
@@ -30,6 +30,7 @@
         <li><a href="/docs/tests/entities.html">Styling character entities</a></li>
         <li><a href="iso-8859-1.html">iso-8859-1 encoding</a></li>
         <li><a href="utf-8.html">utf-8 encoding</a></li>
+        <li><a href="test_getsource.html">getsource test</a></li>
         </ul>
     </li>
     </ul>
@@ -41,7 +42,7 @@
 <p>The purpose of this part of the documentation is to collect various
 sample pages that illustrate and document different vlam options.
 Eventually, this could be used to have automated tests, using a tool
-like <a href="http://selenium.openqa.org/" title="external_link">Selenium</a>.  
+like <a href="http://selenium.openqa.org/" title="external_link">Selenium</a>.
 For now, the tests are "eye-ball" tests conducted by the developers.</p>
 
 <h3>For tutorial writers</h3>
